# raii-timer-cpp

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  simple.cpp
include/timekeeper/: time_counter.hpp  timekeeper.hpp
